.gitignore now ignores assembly files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ Backwards/Library/
 Backwards/Assets/BehaviorBricks/
 Backwards/Backwards.sln
 Backwards/Assets/BehaviorBricks.meta
+Backwards/Assembly-CSharp.csproj
+Backwards/Assembly-CSharp-Editor.csproj
