[POST PROCESSING STACK and CINEMA THEMES LUT'S REQUIRED] Added basic post-pro to MainCam and modified .gitignore to ignore Cinema Themes and Post Pro Stack and related .meta files

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ Backwards/.vs/
 Backwards/Assets/Standard Assets/
 Backwards/obj/
 Backwards/Assets/PostProcessing/
+Backwards/Assets/Cinema Suite/
+Backwards/Assets/Cinema Suite.meta
+Backwards/Assets/PostProcessing.meta
