[LOW POLY SHADERS REQUIRED] Changed the materials to Low Poly Shader optimized for low poly scenes.  Ignored Low Poly Shaders folder.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ Backwards/Assets/PostProcessing/
 Backwards/Assets/Cinema Suite/
 Backwards/Assets/Cinema Suite.meta
 Backwards/Assets/PostProcessing.meta
+
+Backwards/Assets/BrokenVector/
+Backwards/Assets/BrokenVector.meta
