[SIMPLE CUMULUS REQUIRED] Changed the skybox and modified the post-pro effects

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ Backwards/Assets/PostProcessing.meta
 
 Backwards/Assets/BrokenVector/
 Backwards/Assets/BrokenVector.meta
+Backwards/Assets/SimpleCumulus/
+Backwards/Assets/SimpleCumulus.meta
